--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "cordova-android": "~6.3.0",
+    "cordova-ios": "~4.5.4"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.5",
@@ -50,7 +51,7 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "ios"
+      "ios",
       "android"
     ]
   }
