--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "rxjs": "5.5.2",
     "zone.js": "0.8.18",
     "cordova-android": "~6.3.0",
-    "cordova-ios": "~4.5.4"
-
+    "cordova-ios": "~4.5.4",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
