--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/app-version": "^4.5.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/google-analytics": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "6.3.0",
+    "cordova-browser": "5.0.2",
     "cordova-ios": "~4.5.4",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-google-analytics": "^1.8.3",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -51,11 +54,13 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-google-analytics": {}
+      "cordova-plugin-google-analytics": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "ios",
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
