--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "app-version": "0.0.1",
     "cordova-android": "6.3.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "1.1.7",
@@ -37,7 +38,9 @@
     "ionic-plugin-keyboard": "2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-browser": "5.0.2",
+    "cordova-plugin-app-version": "^0.1.9"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.5",
